Fix bugs in jwt filter, create UnAuthController to handle requests without token and simplify code block in file store