@@ -26,7 +26,7 @@ public class UserDetailsServiceImpl implements UserDetailsService {
 
         Map<String, Boolean> scope = FieldsGenerator.generateFields(User.class, fields);
 
-        User user = userMapper.selectUser(User.builder().username(username).build(), scope).get(0);
+        User user = userMapper.selectUser(User.builder().username(username).build(), scope).getFirst();
 
         if (user == null)
             throw new UsernameNotFoundException("User not found");
